# Test_task

./: README.md
Liveness_Detection/: CMakeLists.txt  Liveness_Detection.cpp
Test_2d_light_v3/: CMakeLists.txt  Test_2d_light_v3.cpp
examples/cpp/test_videocap/: test_videocap.cpp
graphic/: 2d_light_version_3.csv  graphic.py  liveness_results.csv
include/pbio/: Context.h  ProcessingBlock.h
liveness_results/: Liveness_Detection.csv  Project1.sln  graphic.py  test_2d_light_v3.csv
liveness_results/Project1/: CMakeLists.txt  FileName.cpp
liveness_results/Project1/x64/Debug/: Project1.ilk  vc143.idb
liveness_results/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
liveness_results/Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate
